fixed pic loading problem, text alignment, card button location

--- a/views/game.css
+++ b/views/game.css
@@ -114,3 +114,12 @@
     color: black;
         
     }
+
+    .footer {
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: rgb(12, 11, 11);
+        color: white;
+        text-align: center;
+        }
