--- a/views/mood.css
+++ b/views/mood.css
@@ -111,3 +111,14 @@ input{
 
 text-align: center;
 }
+
+.footer {
+	
+	left: 0;
+	bottom: 0;
+  width: 100%;
+  
+	background-color:rgb(12, 11, 11);
+	color: white;
+	text-align: center;
+  }
